kubernetes/apps/pv-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pv-demo
spec:
  selector:
    app: pv-demo
  ports:
    - name: http
      port: 80
      targetPort: http
